css/styles.css
/****************************************
            COMMON ELEMENTS
*****************************************/

/* CUSTOM PROPERTIES */

:root {
    --main-text-color: #130D0C;
    --alt-text-color: #0C0F13;
    --light-ui-color: #C49776;
    --dark-ui-color: #32271F;

    --font-script: "Dynalight", serif;
    --font-handwritten: "Indie Flower", cursive;
    --font-serif: "PT Serif", serif;
    --font-sans: "Roboto", sans-serif;
}

/*  STRUCTURING */

/* h1, h2, h3, h4, a, body, p, ul, ol, menu, div, article, header, aside {
    outline:purple 1px solid;
} */

/* body {
    outline: red solid 5px;
} */

/* CSS RESET */

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    appearance: none;
}

h1, h2, h3, h4, a, body, p, ul, ol, menu, div, article {
    list-style: none;
    margin: 0;
    font-size: inherit;
    font-weight: inherit;
}

a {
    color: inherit;
    text-decoration: none;
}

h1, h2, h3, h4 {
    text-wrap: balance;
}

p, small {
    text-wrap: pretty;
    hyphens: auto;
}

input, button, textarea, select {
    font: inherit;
}

body {
    color: var(--main-text-color);
}

/* BACKGROUND IMAGES */

body, 
.home, 
.section-doc, 
.nav, 
.options, 
.filing-cabinet > div > div, 
.skills-stamp, 
.skills-stickman-animation, 
.contact-mail-icon,
.socialmedia-icon {
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain; 
}

/* FONTS */

/* 
Container query units are used along all the texts when the browser supports them.
As a fallback, this system with custom properties is used.
*/


/****************************************
               STRUCTURE
*****************************************/

/* PORTFOLIO SECTIONS */

html {
    scroll-behavior: smooth;
    scrollbar-color: var(--dark-ui-color) var(--light-ui-color);
}

body {
    background-color: #9C655D;
    background-size: cover;
    background-image:
        radial-gradient(ellipse 60% 50%, transparent 65%, #130D0C55 95%, #130D0C77 100%),
        url(../src/background/background_alt.png);
    background-image:
        radial-gradient(ellipse 60% 50%, transparent 65%, #130D0C55 95%, #130D0C77 100%),
        image-set(
            url(../src/background/background_medium.webp) 1x,
            url(../src/background/background_large.webp) 2x
        );
    min-height: 100vh;
    display: block flow-root;
    position: relative;
}

.home {
    background-image: url(../src/fcabinet/certificate_alt.png);
    background-image: 
        image-set(
            url(../src/fcabinet/certificate_medium.webp) 1x,
            url(../src/fcabinet/certificate_large.webp) 2x
        );
    aspect-ratio: 1200/806;
    width: 40vw;
    max-width: 80rem;
    position: relative;
    margin: 10vh auto 0;
    box-shadow: 0 0 7px 3px #130D0C99;
}

.section-doc {
    position: fixed;
    z-index: 30;
    height: 95vh;
    inset: 0;
    margin: auto;
    filter: drop-shadow(0 0 5px #130D0C);
    overflow: clip;
    overflow-clip-margin: content-box;
}

.about-me {
    background-image: url(../src/documents/document1_alt.png);
    background-image: 
        image-set(
            url(../src/documents/document1_medium.webp) 1x,
            url(../src/documents/document1_large.webp) 2x
        );
    aspect-ratio: 1218/1600;
}

.skills {
    background-image: url(../src/documents/document2_alt.png);
    background-image: 
        image-set(
            url(../src/documents/document2_medium.webp) 1x,
            url(../src/documents/document2_large.webp) 2x
        );
    aspect-ratio: 1190/1600;
    height: 90vh;
}

.projects {
    background-image: url(../src/documents/document3_alt.png);
    background-image: 
        image-set(
            url(../src/documents/document3_medium.webp) 1x,
            url(../src/documents/document3_large.webp) 2x
        );
    aspect-ratio: 1144/1600;
}

.contact {
    background-image: url(../src/documents/document4_alt.png);
    background-image: 
        image-set(
            url(../src/documents/document4_medium.webp) 1x,
            url(../src/documents/document4_large.webp) 2x
        );
    aspect-ratio: 1151/1600;
}

/* SECTION LABELS & ANCHORS' TARGETS */

/* 
Labels ('summary' elements) allow the opening of the different sections ('details' elements). They
appear inside the drawers of the filing cabinet.

Anchors' targets ('span' elements) are necessary since the section documents have a fixed position in
the viewport and can't trigger the scroll animation. These targets are transparent and are positioned at 
different heights of the filing cabinet in order to trigger the scroll animation correctly when using 
the post-it nav. 
*/

.section-label {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    border: #13110C min(.2vh, .3vw) solid;
    border-bottom: none;
    border-radius: max(.6vw, 5px) max(.6vw, 5px) 0 0;
    list-style: none;
    cursor: pointer;
    user-select: none;
    z-index: 5;
    
    & > div {
        display: grid;
        place-content: center;
        height: 80%;
        width: 80%;
        border: #32271F 1px solid;
        border-radius: max(.2vw, 1px);
        font: .8vmax var(--font-sans);
        letter-spacing: 2px;
        text-transform: uppercase;
    }
}

@supports (font-size: 1cqw) {
    .section-label {
        container-type: inline-size;
        
        & > div {
            font-size: 11cqw;
            border-width: 1.2cqw;
            letter-spacing: 1.6cqw;
        }
    }
}
/* ... */

